# NEW-IDEA

./: .github-description.txt  .gitignore  CONTRIBUTING.md  LICENSE  MODEL_USAGE.md  README.md  RESULTS.md  SETUP.md  TECHNICAL.md  TESTING_GUIDE.md  pyproject.toml  requirements.txt  run_comprehensive_tests.py  test_system.py
communication/: unity_bridge.py
ml_training/: analytics_utils.py  base_environment.py  continue_training.py  escape_cage_trainer.py  fast_training.py  improved_trainer.py  logger_setup.py  model_manager.py  model_utils.py  test_trained_ai.py  testing_utils.py  training_utils.py
ml_training/config/: __init__.py  hyperparameters.py
ml_training/trainers/: __init__.py  base_trainer.py  continue_trainer.py  fast_trainer.py  standard_trainer.py  trainer_factory.py
models/: .gitkeep  .model_metadata.json
notebooks/: test_environment.ipynb
test_session/: training_session_20250710_202105_summary.json  training_session_20250711_103659_summary.json
tests/: __init__.py  test_analytics_utils.py  test_communication.py  test_environments.py  test_model_utils.py  test_testing_utils.py
